tui/src/snapshots/codex_tui__verbosity_prompt__tests__startup_verbosity_prompt_initial_vt100.snap
---
source: tui/src/verbosity_prompt.rs
expression: terminal.backend().vt100().screen().contents()
---
  Setup 2/2                                                                                         

  Select Verbosity                                   • I'll first align the rendering pipeline.
  Choose how much detail to show
                                                     • Changed 2 files (+3 -1)
› 1. Minimal (default)  Show results only              └ Edited protocol/src/models.rs (+2 -1)
  2. Simple             Show key progress updates        Edited protocol/src/protocol.rs (+1 -0)

                                                     • Final answer text stays fully visible.









  Press enter to confirm or esc to skip                                                             
  You can change this later via /verbosity.
