tui/src/snapshots/codex_tui__verbosity_prompt__tests__startup_verbosity_prompt_narrow_truncated_height_vt100.snap
---
source: tui/src/verbosity_prompt.rs
expression: terminal.backend().vt100().screen().contents()
---
  Setup 2/2                                                                     

  Select Verbosity
  Choose how much detail to show

› 1. Minimal (default)  Show results only
  2. Simple             Show key progress updates

  Press enter to confirm or esc to skip                                         
  You can change this later via /verbosity.                                     

  Preview
